--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@nomiclabs/hardhat-ethers": "^2.0.0",
+		"@nomiclabs/hardhat-etherscan": "^3.0.4",
 		"@nomiclabs/hardhat-waffle": "^2.0.0",
 		"chai": "^4.2.0",
 		"dotenv": "^16.0.1",
